--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 processed_data/
-
+code/GeneSet_toS2G/**/*.bed
 
 processed_data/PCHiC_peak_matrix_cutoff5.tsv
 processed_data/ABCpaper_NasserFulcoEngreitz2020_Blood_AvgHiC.txt.gz
